--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=money
 server.port=8081
-spring.datasource.url= ${URL}
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/money
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# This will create table automatically in your database
+spring.jpa.hibernate.ddl-auto=update
