add enviroment secret conection db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=money
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/money
+spring.datasource.url=${URL}
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# This will create table automatically in your database
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
