--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=money
 server.port=8081
-spring.datasource.url=${URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/money
 spring.datasource.username=postgres
-spring.datasource.password=${PASSWORD}
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
