--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=money
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/money
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${URL}
+spring.datasource.username=bitacora_loans_user
+spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
